# etl-1bilhao-linhas

./: .gitignore  README.md  etl-duckdb.py  etl-pandas.py  etl-python.py  pyproject.toml
data/: measurements_summary.parquet  weather_stations.csv
