[tool.poetry]
name = "etl-1bilhao-linhas"
version = "0.1.0"
description = ""
authors = ["Andre Vinicius <andrevini.neves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
duckdb = "^1.0.0"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
